# -*- coding: utf-8 -*-

class Handler(object):
    def __init__(self):
        pass

    def init(self):
        pass

    def destroy(self):
        pass

    def handle(self):
        pass
